examples/test/testpolicy601.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy601
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key35: value44
      key23: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value41
          key14: value45
          key4: value14
      podSelector:
        matchLabels:
          key19: value39
